# automatic-tweet-generator

./: .gitignore  README.md  config.ini  pyproject.toml
app/data/pictures/: custom_download.py
app/data/quotes/: quote_scraper.py
app/src/quote_overlay/: overlay_quotes.py
app/src/tweet_scheduler/: schedule_tweets.py  tweeted.csv
